<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <!-- 로그인 Fragment -->
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.myapplication.ui.Log_in.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/move_login_to_home"
            app:destination="@+id/navigation_home" />

        <action
            android:id="@+id/move_login_to_signup"
            app:destination="@+id/navigation_signup" />

        <action
            android:id="@+id/move_login_to_admin_main"
            app:destination="@+id/navigation_admin_main" />
    </fragment>

    <!-- 회원가입 -->
    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.example.myapplication.ui.Sign_up.SignupFragment"
        android:label="@string/title_signup"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/move_signup_to_login"
            app:destination="@+id/navigation_login" />
    </fragment>

    <!-- 홈 -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.Home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/move_home_to_camera"
            app:destination="@+id/navigation_mission_camera" />

        <!-- 홈 화면 상단에 카드 클릭 시, gallery로 이동 -->
        <action
            android:id="@+id/move_home_to_gallery"
            app:destination="@+id/navigation_gallery" />

        <action
            android:id="@+id/action_home_to_history_detail"
            app:destination="@id/navigation_history_detail" />
    </fragment>

    <!-- 포인트 -->
    <fragment
        android:id="@+id/navigation_point"
        android:name="com.example.myapplication.ui.Point.PointFragment"
        android:label="@string/title_point"
        tools:layout="@layout/fragment_point">

        <!-- [추가됨] 상세 화면으로 이동하는 화살표 -->
        <action
            android:id="@+id/action_pointFragment_to_rewardDetailFragment"
            app:destination="@id/navigation_reward_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reward_detail"
        android:name="com.example.myapplication.ui.Point.RewardDetailFragment"
        android:label="상품 상세"
        tools:layout="@layout/layout_mission_item_detail">
        <argument
            android:name="brand"
            app:argType="string" />
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="price"
            app:argType="integer" />
        <argument
            android:name="imageRes"
            app:argType="integer" />
    </fragment>

    <!-- 마이페이지 -->
    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.example.myapplication.ui.My_page.My_pageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />

    <!-- 인증 카메라 -->
    <fragment
        android:id="@+id/navigation_mission_camera"
        android:name="com.example.myapplication.ui.Mission_Camera.Mission_CameraFragment"
        android:label="@string/title_mission_camera"
        tools:layout="@layout/fragment_mission_camera" />

    <!-- 관리자 메인 -->
    <fragment
        android:id="@+id/navigation_admin_main"
        android:name="com.example.myapplication.ui.Admin_Main.AdminMainFragment"
        android:label="@string/title_admin_main"
        tools:layout="@layout/fragment_admin_main">

        <action
            android:id="@+id/move_admin_main_to_admin_mission_create"
            app:destination="@+id/navigation_admin_mission_create" />

        <action
            android:id="@+id/move_admin_main_to_admin_mission_list"
            app:destination="@+id/navigation_admin_mission_list" />
    </fragment>

    <!-- 관리자 미션 생성 -->
    <fragment
        android:id="@+id/navigation_admin_mission_create"
        android:name="com.example.myapplication.ui.admin.AdminMissionCreateFragment"
        android:label="관리자 미션 생성"
        tools:layout="@layout/fragment_admin_mission_create">

        <action
            android:id="@+id/move_admin_create_to_mission_list"
            app:destination="@+id/navigation_admin_mission_list" />
    </fragment>

    <!-- 관리자 미션 리스트 -->
    <fragment
        android:id="@+id/navigation_admin_mission_list"
        android:name="com.example.myapplication.ui.Admin_MissionList.AdminMissionListFragment"
        android:label="@string/title_admin_mission_list"
        tools:layout="@layout/fragment_admin_mission_list">

        <!-- 목록 -> 승인 대기 미션 상세 이동 액션 (여기가 새로 추가된 부분) -->
        <action
            android:id="@+id/move_admin_mission_list_to_pending_detail"
            app:destination="@+id/navigation_admin_pending_mission_detail" />
    </fragment>

    <!-- 승인 대기 미션 상세 Fragment (새로 추가) -->
    <fragment
        android:id="@+id/navigation_admin_pending_mission_detail"
        android:name="com.example.myapplication.ui.Admin_MissionList.AdminPendingMissionDetailFragment"
        android:label="승인 대기 미션 상세"
        tools:layout="@layout/fragment_admin_pending_mission_detail" />


    <!-- NEW_갤러리 -->
    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.myapplication.ui.Home.GalleryFragment_2"
        android:label="GalleryFragment"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_history_detail"
        android:name="com.example.myapplication.ui.MissionHistory.MissionHistoryDetailFragment"
        android:label="fragment_mission_history_detail"
        tools:layout="@layout/fragment_mission_history_detail">

        <argument
            android:name="participationId"
            app:argType="long"
            android:defaultValue="0L" />

    </fragment>

    <fragment
        android:id="@+id/navigation_history_list"
        android:name="com.example.myapplication.ui.MissionHistory.MissionHistoryFragment"
        android:label="참여 챌린지 이력"
        tools:layout="@layout/fragment_mission_history_list">

        <action
            android:id="@+id/action_historyList_to_detail"
            app:destination="@id/navigation_history_detail" />
    </fragment>

</navigation>